try to fix about button on mobile

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ li.dropdown {
     background-color: #f1f1f1
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:active .dropdown-content {
     display: block;
 }
 
